--- a/README
+++ b/README
@@ -21,4 +21,4 @@ Prime sieving algorithm in java, using modulo 30. Scans the range from 1 to 10^9
  *	 50_000_000_010		60.537 s	2,119,654,578 primes
  *	 64_400_000_000		89.428 s	2,701,075,683 primes
  
-Actually max working value aren't max, when I will have some free time, I will try to tweak it.
+Actually max working value aren't max, when I will have some free time, I will try to make it more precise.
