--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Prime sieving algorithm in java, using modulo 30. Scans the range from 1 to 10^9
 
  * Intel(R) Core(TM) i5-7600K CPU @ 3.80GHz
  * 
- *   64_410_000_030    128.697 s	2,701,477,379 primes	- max working value
+ *   64_410_000_030    128.697 s	2,701,477,379 primes	- almost max working value
  *   50_000_000_010     97.805 s    2,119,654,578 primes
  *   10_000_000_020     17.035 s      455,052,512 primes
  * 
