--- a/README
+++ b/README
@@ -2,7 +2,24 @@
 
 Prime sieving algorithm in java, using modulo 30. Scans the range from 1 to 10^9 below 2 seconds on i5 processor. Single threaded.
 
- * Intel(R) Core(TM) i5-7600K CPU @ 3.80GHz
+2017.12.12 big update
+
+- many cleanups
+- added terminal for easier usage
+- added primes counting function ( only in sieve for now )
+- fixed isPrimeLong function, now we can check is number is a prime from 1 to Long.MAX_VALUE ( probably 9.223.372.036.854.775.807 )
+- added benchmark for isPrimeLong function
+
+TODO:
+sieve benchmarks directly from terminal
+
+
+
+#####################
+# Sieve benchmarks: #
+#####################
+
+* Intel(R) Core(TM) i5-7600K CPU @ 3.80GHz
  * 
  *   64_410_000_030    128.697 s    2,701,477,379 primes	- almost max working value
  *   50_000_000_010     97.805 s    2,119,654,578 primes
@@ -22,4 +39,3 @@ Prime sieving algorithm in java, using modulo 30. Scans the range from 1 to 10^9
  *   50_000_000_010     60.537 s    2,119,654,578 primes
  *   64_400_000_000     89.428 s    2,701,075,683 primes
  
-Actually max working value aren't max, when I will have some free time, I will try to make it more precise.
