--- a/README
+++ b/README
@@ -34,3 +34,7 @@ sieve benchmarks directly from terminal
  *    5_000_000_010      5.909 s    about 234 * 10^6  primes
  *    1_000_000_020      1.007 s     50,847,536 primes
  *      100_000_020      0.044 s      5,761,456 primes
+
+# The largest heading
+## The second largest heading
+###### The smallest heading
